force-app/main/default/objects/COWO_CurrencyIsoCode__mdt/COWO_CurrencyIsoCode__mdt.object-meta.xml
<CustomObject>
    <label>通貨コード管理</label>
</CustomObject>