force-app/main/default/objects/COWO_CurrencyIsoCode__mdt/fields/COWO_CurrencyMark__c.field-meta.xml
<CustomField>
    <fullName>COWO_CurrencyMark__c</fullName>
    <label>通貨マーク</label>
    <length>6</length>
    <type>Text</type>
</CustomField>