force-app/main/default/objects/COWO_CurrencyIsoCode__mdt/fields/COWO_Digits__c.field-meta.xml
<CustomField>
    <fullName>COWO_Digits__c</fullName>
    <label>小数点桁数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>