force-app/main/default/objects/COWO_CurrencyIsoCode__mdt/fields/COWO_DigitsInput__c.field-meta.xml
<CustomField>
    <fullName>COWO_DigitsInput__c</fullName>
    <label>小数点表示</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>