force-app/main/default/objects/COWO_CurrencyIsoCode__mdt/fields/COWO_DisplayFormat__c.field-meta.xml
<CustomField>
    <fullName>COWO_DisplayFormat__c</fullName>
    <label>フォーマット</label>
    <length>20</length>
    <type>Text</type>
</CustomField>